--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <H1>
-        <nav></nav>
-    </H1>
+    <header>
+        <h1>Hello kene</h1>
+    </header>
 </body>
 </html>
